# ByteCacheDB

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
benchmarks/: benchmark.py  benchmark_matrix.py  concurrent_clients.py  latency_benchmark.py  matrix_results.json  recovery_benchmark.py  recovery_results.json  results.json
docs/: architecture.md  benchmarks.md  concurrency.md  protocol.md
include/: client_handler.hpp  command_parser.hpp  metrics.hpp  persistence.hpp  response.hpp  server.hpp  storage_engine.hpp  thread_pool.hpp  ttl_manager.hpp
scripts/: build.sh  demo.sh  run_benchmarks.sh  run_server.sh  run_tests.sh
src/: client_handler.cpp  command_parser.cpp  main.cpp  metrics.cpp  persistence.cpp  response.cpp  server.cpp  storage_engine.cpp  thread_pool.cpp  ttl_manager.cpp
tests/: test_concurrency.cpp  test_framework.hpp  test_parser.cpp  test_persistence.cpp  test_storage.cpp  test_tcp_integration.cpp  test_ttl.cpp
